使用 Colaboratory 建立

--- a/Word2Vec.ipynb
+++ b/Word2Vec.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 20,
       "metadata": {
         "collapsed": true,
         "id": "nYewMEKGaB4E"
@@ -42,25 +42,34 @@
       ],
       "metadata": {
         "id": "n6m5nZarbp_x",
-        "outputId": "0293b595-7b0f-41f4-b89b-880aa6f70950",
+        "outputId": "9fd562b2-3cac-4ea5-d6f8-c11db22a9c7c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Data Preprocessing"
+      ],
+      "metadata": {
+        "id": "drWvT6iy_Zxu"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 22,
       "metadata": {
         "collapsed": true,
         "id": "OUyDzynaaB4I"
@@ -138,8 +147,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Load Dataset"
+      ],
+      "metadata": {
+        "id": "v0pZGXTG_iNm"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 23,
       "metadata": {
         "id": "rgQ-Ku-aaB4L"
       },
@@ -153,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 24,
       "metadata": {
         "collapsed": true,
         "id": "i6Nv9TccaB4M"
@@ -193,9 +211,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-eo2dvfaVj9-",
-        "outputId": "500ead56-87ff-43fe-9d1c-9e92d056af08"
+        "outputId": "70c59d8d-d645-4ef9-ba7d-74776fe728de"
       },
-      "execution_count": 6,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,9 +240,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vf-tWWMmVGVv",
-        "outputId": "34f45f79-ee16-4c9f-cd87-f909c4603390"
+        "outputId": "b5f03458-0b61-4b3e-e265-e2ee15fa050c"
       },
-      "execution_count": 7,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,13 +257,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 26
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 27,
       "metadata": {
         "collapsed": true,
         "id": "Zm-Sln_vaB4O"
@@ -280,7 +298,7 @@
       "metadata": {
         "id": "9e82vQ0lz7QI"
       },
-      "execution_count": 9,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -301,19 +319,19 @@
       "metadata": {
         "id": "RbSFcBOeHwYk"
       },
-      "execution_count": 10,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 30,
       "metadata": {
         "collapsed": true,
         "id": "T4QtqogMaB4O",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3d40b017-39e4-42fe-869b-2eeeef1c4389"
+        "outputId": "e96130ec-5d77-4687-cc43-8c6c69c6a76c"
       },
       "outputs": [
         {
@@ -332,10 +350,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 31,
       "metadata": {
         "id": "etsMMY-9aB4P",
-        "outputId": "cc5f9019-61a3-483e-fd18-1968bb0aa11b",
+        "outputId": "5c1c9076-f919-426f-e268-b7232b6e0a6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -353,7 +371,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 31
         }
       ],
       "source": [
@@ -362,10 +380,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 32,
       "metadata": {
         "id": "XusiZhG6aB4Q",
-        "outputId": "70a8bcfb-0b33-49b6-b045-ebfcee444505",
+        "outputId": "08093f6b-0625-4209-ad86-7601f432548d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -383,7 +401,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 32
         }
       ],
       "source": [
@@ -391,11 +409,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Word2Vec Model"
+      ],
+      "metadata": {
+        "id": "XwgGF1Fh_qni"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 33,
       "metadata": {
         "id": "QeeN9Tj9aB4Q",
-        "outputId": "0f3775f3-2b18-4af8-d19a-7301e32acee1",
+        "outputId": "c03a5e49-c0c7-4e77-fbc6-c6aacb11420d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -441,9 +468,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab5a9147-f99a-4dcf-830c-b7af2366ad1f"
+        "outputId": "2bea69b7-09ef-42d1-8665-98f9a4f64673"
       },
-      "execution_count": 15,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,9 +494,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kk9hRjzsiwsR",
-        "outputId": "61bec1fa-9a33-4d76-949c-0a37bdf516e7"
+        "outputId": "373ee882-4299-4b0f-ac10-d9811af1a0f7"
       },
-      "execution_count": 16,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,9 +519,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3HSMsAMWjlqD",
-        "outputId": "da22024f-b303-45ec-a59d-d103bff71c45"
+        "outputId": "ec40d8a0-a50e-4bc8-85aa-b4b7b00df383"
       },
-      "execution_count": 17,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +540,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 36
         }
       ]
     },
@@ -526,7 +553,7 @@
       "metadata": {
         "id": "jqx_c2RV-8cS"
       },
-      "execution_count": 18,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -541,9 +568,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HGByFbLt-82c",
-        "outputId": "acc122c2-ebec-4d12-8f18-46cf35cefec8"
+        "outputId": "e24352e7-c07b-4dac-bc25-daec093de265"
       },
-      "execution_count": 19,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
