--- a/Word2Vec.ipynb
+++ b/Word2Vec.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 40,
       "metadata": {
         "collapsed": true,
         "id": "nYewMEKGaB4E"
@@ -42,12 +42,12 @@
       ],
       "metadata": {
         "id": "n6m5nZarbp_x",
-        "outputId": "9fd562b2-3cac-4ea5-d6f8-c11db22a9c7c",
+        "outputId": "820b9ecc-779e-45b5-93f9-c4318273bfab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 42,
       "metadata": {
         "collapsed": true,
         "id": "OUyDzynaaB4I"
@@ -78,25 +78,8 @@
       "source": [
         "class RegexFeatures(object):\n",
         "    PATTERNS = {\n",
-        "        \"isInitCapitalWord\": re.compile(r'^[A-Z][a-z]+'),\n",
-        "        \"isAllCapitalWord\": re.compile(r'^[A-Z][A-Z]+$'),\n",
-        "        \"isAllSmallCase\": re.compile(r'^[a-z]+$'),\n",
-        "        \"isWord\": re.compile(r'^[a-zA-Z][a-zA-Z]+$'),\n",
-        "        \"isAlphaNumeric\": re.compile(r'^\\p{Alnum}+$'),\n",
-        "        \"isSingleCapLetter\": re.compile(r'^[A-Z]$'),\n",
-        "        \"containsDashes\": re.compile(r'.*--.*'),\n",
-        "        \"containsDash\": re.compile(r'.*\\-.*'),\n",
-        "        \"singlePunctuation\": re.compile(r'^\\p{Punct}$'),\n",
         "        \"repeatedPunctuation\": re.compile(r'^[\\.\\,!\\?\"\\':;_\\-]{2,}$'),\n",
-        "        \"singleDot\": re.compile(r'[.]'),\n",
-        "        \"singleComma\": re.compile(r'[,]'),\n",
-        "        \"singleQuote\": re.compile(r'[\\']'),\n",
-        "        \"isSpecialCharacter\": re.compile(r'^[#;:\\-/<>\\'\\\"()&]$'),\n",
-        "        \"fourDigits\": re.compile(r'^\\d\\d\\d\\d$'),\n",
-        "        \"isDigits\": re.compile(r'^\\d+$'),\n",
         "        \"isNumber\": re.compile(r'^((\\p{N}{,2}([,]?\\p{N}{3})+)(\\.\\p{N}+)?)$'),\n",
-        "        \"containsDigit\": re.compile(r'.*\\d+.*'),\n",
-        "        \"endsWithDot\": re.compile(r'\\p{Alnum}+\\.$'),\n",
         "        \"isURL\": re.compile(r'^http[s]?://'),\n",
         "        \"isMention\": re.compile(r'^(RT)?@[\\p{Alnum}_]+$'),\n",
         "        \"isHashtag\": re.compile(r'^#\\p{Alnum}+$'),\n",
@@ -157,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 43,
       "metadata": {
         "id": "rgQ-Ku-aaB4L"
       },
@@ -171,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 44,
       "metadata": {
         "collapsed": true,
         "id": "i6Nv9TccaB4M"
@@ -211,9 +194,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-eo2dvfaVj9-",
-        "outputId": "70c59d8d-d645-4ef9-ba7d-74776fe728de"
+        "outputId": "e56d3158-c2b6-4c6c-83d0-beb3adbe3956"
       },
-      "execution_count": 25,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,9 +223,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vf-tWWMmVGVv",
-        "outputId": "b5f03458-0b61-4b3e-e265-e2ee15fa050c"
+        "outputId": "201ba643-19d9-4f32-95b4-fa181d7a8b12"
       },
-      "execution_count": 26,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,13 +240,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 46
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 47,
       "metadata": {
         "collapsed": true,
         "id": "Zm-Sln_vaB4O"
@@ -298,7 +281,7 @@
       "metadata": {
         "id": "9e82vQ0lz7QI"
       },
-      "execution_count": 28,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -319,19 +302,19 @@
       "metadata": {
         "id": "RbSFcBOeHwYk"
       },
-      "execution_count": 29,
+      "execution_count": 49,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 50,
       "metadata": {
         "collapsed": true,
         "id": "T4QtqogMaB4O",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e96130ec-5d77-4687-cc43-8c6c69c6a76c"
+        "outputId": "403774b5-aebb-42c6-ea3b-5066919913a1"
       },
       "outputs": [
         {
@@ -350,10 +333,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 51,
       "metadata": {
         "id": "etsMMY-9aB4P",
-        "outputId": "5c1c9076-f919-426f-e268-b7232b6e0a6c",
+        "outputId": "4d5187d9-ca26-47a4-9588-d04a0488463f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -371,7 +354,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 51
         }
       ],
       "source": [
@@ -380,10 +363,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 52,
       "metadata": {
         "id": "XusiZhG6aB4Q",
-        "outputId": "08093f6b-0625-4209-ad86-7601f432548d",
+        "outputId": "7cbc9e27-66c4-4f5d-da02-ae914c9ac29f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -401,7 +384,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 52
         }
       ],
       "source": [
@@ -419,10 +402,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 53,
       "metadata": {
         "id": "QeeN9Tj9aB4Q",
-        "outputId": "c03a5e49-c0c7-4e77-fbc6-c6aacb11420d",
+        "outputId": "ea09f049-fc75-4357-df9e-b29d0999cca6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -468,9 +451,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2bea69b7-09ef-42d1-8665-98f9a4f64673"
+        "outputId": "c20ee642-5c27-4399-9757-860c3b7c5e09"
       },
-      "execution_count": 34,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,9 +477,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kk9hRjzsiwsR",
-        "outputId": "373ee882-4299-4b0f-ac10-d9811af1a0f7"
+        "outputId": "4986b06c-699d-4c6a-8ba5-b9346c28d2f9"
       },
-      "execution_count": 35,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,35 +495,35 @@
     {
       "cell_type": "code",
       "source": [
-        "word2vec.wv.most_similar(\"good\")"
+        "word2vec.wv.most_similar(\"Sunday\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3HSMsAMWjlqD",
-        "outputId": "ec40d8a0-a50e-4bc8-85aa-b4b7b00df383"
+        "outputId": "20c141fa-b47d-493f-9d2f-dde3eb0b7b2a"
       },
-      "execution_count": 36,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[('now', 0.9969407320022583),\n",
-              " ('too', 0.996832013130188),\n",
-              " ('need', 0.9968186616897583),\n",
-              " ('all', 0.9965500235557556),\n",
-              " ('gonna', 0.9963576197624207),\n",
-              " ('have', 0.9960732460021973),\n",
-              " ('one', 0.995962917804718),\n",
-              " ('had', 0.9959287643432617),\n",
-              " ('much', 0.9957548975944519),\n",
-              " ('work', 0.9954919815063477)]"
+              "[('please', 0.9987372756004333),\n",
+              " ('more', 0.9983861446380615),\n",
+              " ('new', 0.99811851978302),\n",
+              " ('later', 0.998092532157898),\n",
+              " ('weekend', 0.9980342984199524),\n",
+              " ('done', 0.99791020154953),\n",
+              " ('our', 0.9977797865867615),\n",
+              " ('awesome', 0.9976701736450195),\n",
+              " ('meet', 0.9975164532661438),\n",
+              " ('start', 0.9973775148391724)]"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 56
         }
       ]
     },
@@ -553,7 +536,7 @@
       "metadata": {
         "id": "jqx_c2RV-8cS"
       },
-      "execution_count": 37,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -568,9 +551,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HGByFbLt-82c",
-        "outputId": "e24352e7-c07b-4dac-bc25-daec093de265"
+        "outputId": "b183a530-be62-4d62-9564-6e99f906e257"
       },
-      "execution_count": 38,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
